[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resnets"
version = "0.0.1"
requires-python = ">=3.7"
authors = [
    { name = "Szymon Mikler", email = "sjmikler@gmail.com" },
]
maintainers = [
    { name = "Szymon Mikler", email = "sjmikler@gmail.com" },
]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT License" }
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "progress-table",
]

[project.urls]
Repository = "https://github.com/sjmikler/resnets"
Issues = "https://github.com/sjmikler/resnets/issues"

##################################
## Formatting and testing tools ##
##################################

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line_length = 120
